--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
     "vitest": "^0.19.1"
+  },
+  "dependencies": {
+    "date-fns": "^2.29.1"
   }
 }
