--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@visualjerk/morgen",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "files": [
     "dist"
@@ -14,7 +14,7 @@
     }
   },
   "scripts": {
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && TYPES=true tsc --project tsconfig.types.json",
     "test": "vitest"
   },
   "devDependencies": {
