--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "@visualjerk/morgen",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "type": "module",
   "files": [
     "dist"
   ],
-  "main": "./dist/morgen.umd.cjs",
-  "module": "./dist/morgen.js",
+  "main": "./dist/index.umd.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/morgen.js",
-      "require": "./distmorgen.umd.cjs"
+      "import": "./dist/index.js",
+      "require": "./dist/index.umd.cjs"
     }
   },
   "scripts": {
@@ -20,9 +21,7 @@
   "devDependencies": {
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
-    "vitest": "^0.19.1"
-  },
-  "dependencies": {
+    "vitest": "^0.19.1",
     "date-fns": "^2.29.1"
   }
 }
