--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@visualjerk/morgen",
-  "version": "0.0.4",
+  "version": "0.0.6",
   "type": "module",
   "files": [
     "dist"
@@ -8,6 +8,7 @@
   "main": "./dist/index.umd.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "typings": "./dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.js",
