--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "date-parrot",
-  "version": "0.0.11",
+  "version": "0.0.12",
+  "homepage": "https://github.com/visualjerk/date-parrot",
   "type": "module",
   "files": [
     "dist"
