--- a/package.json
+++ b/package.json
@@ -18,12 +18,20 @@
   },
   "scripts": {
     "build": "tsc && vite build && TYPES=true tsc --project tsconfig.types.json",
-    "test": "vitest"
+    "test": "vitest",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:serve": "vitepress serve docs"
   },
   "devDependencies": {
+    "date-fns": "^2.29.1",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^7.7.2",
+    "tailwindcss": "^3.1.7",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
+    "vitepress": "1.0.0-alpha.4",
     "vitest": "^0.19.1",
-    "date-fns": "^2.29.1"
+    "vue": "^3.2.37"
   }
 }
