--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "test": "vitest",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:serve": "vitepress serve docs"
+    "docs:serve": "vitepress serve docs/",
+    "docs:deploy": "gh-pages -d docs/.vitepress/dist"
   },
   "devDependencies": {
     "date-fns": "^2.29.1",
+    "gh-pages": "^4.0.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^7.7.2",
     "tailwindcss": "^3.1.7",
