--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,9 +13,14 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-          cache: pnpm
+      - uses: pnpm/action-setup@v2.0.1
+        id: pnpm-install
+        with:
+          version: 6.0.2
+          run_install: |
+            - recursive: true
+              args: [--frozen-lockfile, --strict-peer-dependencies]
       - run: pnpm install --frozen-lockfile
-
       - name: Build
         run: pnpm docs:build
 
